# game-engine-cpp-template

./: .clang-format  CMakeLists.txt  README.md  example.cpp
docs/: build.md  design_philosophy.md
